--- a/public/scss/global/_sections.scss
+++ b/public/scss/global/_sections.scss
@@ -463,7 +463,8 @@
     left: 0;
     top: 0;
     content: "";
-    background-color: rgba(0, 0, 0, 0.7); }
+    background-color: transparent;
+}
 .section-image .container {
     z-index: 2;
     position: relative; }
